# assignment6-rag-engine-mcp

./: .gitignore  README.md  main.py  pyproject.toml
app/: celery_app.py  main.py  mcp_server.py  settings.py  store.py  tasks.py
app/router/: documents.py  search.py  upload.py
app/services/: chunker.py  key_points.py  ocr.py
